Gestion de peliculas y cines

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -285,7 +285,7 @@
                                 </p>
                                 <p class="ms-4">
                                     <label for="peliculaimg" class="visually-hidden">Imagen</label>
-                                    <input class="form-control fileinput" type="file" id="peliculaimg" name="imagen" accept="image/*">
+                                    <input class="form-control fileinput" type="file" id="peliculaimg" name="imagen" accept="image/*" required="required">
                                 </p>
                             </div>
                             <div class="d-flex justify-content-start mt-2">
