--- a/src/main/resources/templates/pelicula.html
+++ b/src/main/resources/templates/pelicula.html
@@ -17,7 +17,7 @@
                 
             </div>
             <div class="d-flex mt-5 align-items-center">
-                <img th:src="@{/img/{id}(id=${pelicula.img})}" src="/img/img1.jpg" alt="imagen pelicula" width="210px" height="300px" class="d-inline-block">
+                <img th:src="@{/peliculas/{id}/pic(id=${pelicula.id})}" src="/img/img1.jpg" alt="imagen pelicula" width="210px" height="300px" class="d-inline-block">
                 <iframe width="560" id="trailer" height="315" src="" title="YouTube video player" frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" class="ms-5" allowfullscreen></iframe>
                 <div class="d-flex flex-column ms-5">
