--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -11,7 +11,7 @@
 
     <main class="flex-shrink-0">
         <div class="container">
-            <form class="form-signin login d-flex flex-column align-items-center" method="post" th:action="@{/user/-1}">
+            <form class="form-signin login d-flex flex-column align-items-center" id="formregistro" method="post" th:action="@{/user/-1}" onsubmit="enviarNewUser(event)">
                 <img th:src="@{/img/filmadminlogowhite.png}" src="/img/filmadminlogowhite.png" alt="logo IW" width="269" height="88"
                         class="d-inline-block align-text-top">
                 <div class="d-flex justify-content-between mt-5">
@@ -30,24 +30,24 @@
                         <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required="required">
                     </p>
                     <p class="ms-4">
-                        <label for="confirm_password" class="visually-hidden">Confirmar Password</label>
-                        <input type="password" class="form-control" id="confirm_password" name="confirm_password" placeholder="Confirmar contraseña" required="required">
+                        <label for="pass2" class="visually-hidden">Confirmar Password</label>
+                        <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Confirmar contraseña" required="required">
                     </p>
                 </div>
                 <div class="d-flex justify-content-between mt-2">
                     <p>
-                        <label for="nombre" class="visually-hidden">Nombre</label>
-                        <input type="text" class="form-control" placeholder="Nombre" id="nombre" name="nombre" required="required">
+                        <label for="firstName" class="visually-hidden">Nombre</label>
+                        <input type="text" class="form-control" placeholder="Nombre" id="firstName" name="firstName" required="required">
                     </p>
                     <p class="ms-4">
-                        <label for="apellidos" class="visually-hidden">Apellidos</label>
-                        <input type="text" class="form-control" placeholder="Apellidos" id="apellidos" name="apellidos" required="required">
+                        <label for="lastName" class="visually-hidden">Apellidos</label>
+                        <input type="text" class="form-control" placeholder="Apellidos" id="lastName" name="lastName" required="required">
                     </p>
                 </div>
                 <div class="d-flex justify-content-between mt-2 ms-3">
                     <p>
-                        <label for="fecha" class="visually-hidden">Fecha de Nacimiento</label>
-                        <input type="date" class="form-control mb-2" value="1998-01-01" id="fecha" name="fecha" required="required">
+                        <label for="birthDate" class="visually-hidden">Fecha de Nacimiento</label>
+                        <input type="date" class="form-control mb-2" value="1998-01-01" id="birthDate" name="birthDate" required="required">
                     </p>
                     <p class="ms-4">
                         <label for="userimg" class="visually-hidden">Imagen</label>
@@ -55,12 +55,19 @@
                     </p>
                 </div>
                 
+                <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+                    <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+                      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                    </symbol>
+                    <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+                      <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+                    </symbol>
+                    <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+                      <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                    </symbol>
+                </svg>
                 
                 
-                
-                
-                
-         
                 <div class="d-flex">
                     <button class="btn btn-lg btn-dark btn-block mt-3 ms-2" type="submit">Registrarse</button>
                 </div>
@@ -70,6 +77,13 @@
     </main>
 
     <th:block th:replace="fragments/footer.html :: footer" />
+    <script>
+        window.onload = () => {
+            const myInput = document.getElementById('pass2');
+            myInput.onpaste = e => e.preventDefault();
+        }
+    </script>
+    <script async type="text/javascript" th:src="@{/js/funcionesUser.js}"></script>
 </body>
 
 </html>
