--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -13,7 +13,7 @@
         <script type="text/javascript">
             const config = {
                 socketUrl: "[[${session.ws}?:'']]", // empty is false, will result in no WS being opened
-                rootUrl: "[[${session.url.replace('http','https')}?:'']]",
+                rootUrl: "[[${session.url}?:'']]",
                 csrf: {
                     name: "[[${_csrf.parameterName}]]",
                     value: "[[${_csrf.token}]]"
